Updated Java code generation to use sealed classes.